fix overflow in 'about' div
Former-commit-id: 46bebceb730b4dbe9e4f6ab2bd2411195faf57c5

--- a/src/profile/Profile.css
+++ b/src/profile/Profile.css
@@ -128,10 +128,10 @@ button:focus {
     outline: none; 
     -webkit-transition: .2s; 
     transition: opacity .2s;
-  }
+}
   
-  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
-  .slider::-webkit-slider-thumb {
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
+.slider::-webkit-slider-thumb {
     -webkit-appearance: none; 
     appearance: none;
     width: 15px; 
@@ -139,51 +139,51 @@ button:focus {
     border-radius: 50%;
     background: #666;
     cursor: pointer; 
-  }
-  
-  .slider::-moz-range-thumb {
+}
+
+.slider::-moz-range-thumb {
     width: 15px;
     height: 15px;
     border-radius: 50%;
     background: #666; 
     cursor: pointer; 
-  }
+}
 
 
 
 /* --------------------- Volcano plot --------------------- */
 
-  .scatterplot-container .tick line {
-      stroke: #ccc;
-      stroke-width: 1px;
-      stroke-dasharray: 2;
-  }
+.scatterplot-container .tick line {
+    stroke: #ccc;
+    stroke-width: 1px;
+    stroke-dasharray: 2;
+}
 
-  .scatterplot-container .axis path {
-      stroke: #cccccc00 !important;
-      stroke-width: 1px;
-  }
+.scatterplot-container .axis path {
+    stroke: #cccccc00 !important;
+    stroke-width: 1px;
+}
 
-  .scatterplot-container .axis text {
-      font-size: 12px;
-  }
+.scatterplot-container .axis text {
+    font-size: 12px;
+}
 
-  .scatter-caption {
-      font-size: 12px;
-      pointer-events: none;
-  }
+.scatter-caption {
+    font-size: 12px;
+    pointer-events: none;
+}
 
-  .volcano-fdr-line {
-      fill: none;
-      stroke: #333;
-      stroke-width: 1px;
-      stroke-dasharray: 4;
-  }
+.volcano-fdr-line {
+    fill: none;
+    stroke: #333;
+    stroke-width: 1px;
+    stroke-dasharray: 4;
+}
 
 
 .protein-function-container {
-    height: 100;
-    overflow: 'auto';
+    height: 150px;
+    overflow: auto;
     line-height: 1.33;
 }
 
@@ -226,33 +226,32 @@ in order for the plots to be vertically aligned */
 /* --------------------- d3-tip styles --------------------- */
 /* copied from d3-tip examples: https://github.com/caged/d3-tip */
 
-  .d3-tip {
+.d3-tip {
     padding: 12px;
     background: rgba(0, 0, 0, 0.8);
     color: #fff;
     border-radius: 4px;
     pointer-events: none;
-  }
-  
-  /* Creates a small triangle extender for the tooltip */
-  .d3-tip:after {
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
     box-sizing: border-box;
     display: inline;
     font-size: 10px;
-    width: 100%;
     line-height: 1;
     color: rgba(0, 0, 0, 0.8);
     position: absolute;
     pointer-events: none;
-  }
+}
 
-  .d3-tip.n:after {
+.d3-tip.n:after {
     content: "\25BC";
     margin: -1px 0 0 0;
     top: 100%;
     left: 0;
     text-align: center;
-  }
+}
 
 
 
